objects/Playground_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>Are_Playgrounds_Under_Maintenance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be retrieved to check if playgrounds are available for creation (false) or they are under maintenance, so users will not be able to create a new one or continue one in progress</description>
        <label>Are Playgrounds Under Maintenance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C1P_API_Endpoint__c</fullName>
        <label>C1P API Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C1P_API_Key__c</fullName>
        <label>C1P API Key</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C1P_Platform_Job_Id__c</fullName>
        <description>The ID for the platform job that will be used for Copado Playgrounds.</description>
        <inlineHelpText>The ID for the platform job that will be used for Copado Playgrounds.</inlineHelpText>
        <label>C1P Platform Job Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_URL__c</fullName>
        <inlineHelpText>This is the URL of the community so that APEX can create the right redirect URLs e.g. https://success.copado.com
Do NOT add a trailing slash.</inlineHelpText>
        <label>Community URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Copado_Client_Key__c</fullName>
        <label>Copado Client Key</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copado_Deployer_Package_Id__c</fullName>
        <label>Copado Deployer Package Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Crypto_Key__c</fullName>
        <label>Crypto Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Org_Type__c</fullName>
        <label>Current Org Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Production</fullName>
                    <default>true</default>
                    <label>Production</label>
                </value>
                <value>
                    <fullName>Sandbox</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Edition__c</fullName>
        <description>Edition used to create a new signup request. It takes preference over Template, so template will be taken into account only if Edition is empty</description>
        <inlineHelpText>Edition used to create a new signup request. It takes preference over Template, so template will be taken into account only if Edition is empty</inlineHelpText>
        <label>Edition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Configuration_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Full Configuration Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Full_Configuration_Scratch_Org_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Full Configuration - Scratch Org Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Github_Auth_Url__c</fullName>
        <label>Github Auth Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Github_Client_Id__c</fullName>
        <label>Github Client Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Github_Client_Secret__c</fullName>
        <label>Github Client Secret</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Github_Token_Url__c</fullName>
        <label>Github Token Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Integration_User_Id__c</fullName>
        <label>Integration User Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Playground_Wizard_under_maintenance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This will disable only the Wizard to create new Playgrounds and will show a message indicating that feature is currently under maintenance.</description>
        <label>Is Playground Wizard under maintenance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Licensing_Endpoint__c</fullName>
        <label>Licensing Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Light_Configuration_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Light Configuration Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Production_API_Key__c</fullName>
        <label>Production API Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TSO_Template_Id__c</fullName>
        <inlineHelpText>The 15–character ID of the Trialforce template that is the basis for the trial sign-up. Salesforce must approve the template.</inlineHelpText>
        <label>TSO Template Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template_Id_without_Copado_Deployer__c</fullName>
        <description>The new Template Id without Copado Deployer package</description>
        <label>Template Id without Copado Deployer</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VSM_Package_Id__c</fullName>
        <label>VSM Package Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Playground Setting</label>
    <pluralLabel>Playground Settings</pluralLabel>
</CustomObject>